<resources xmlns:android="http://schemas.android.com/tools" android:ignore="MissingTranslation,NamespaceTypo">
    <string name="app_name">Horus</string>
    <string name="wechat_not_installed">微信未安装</string>
    <string name="qq_not_installed">QQ未安装</string>
    <string name="google_service_not_available">谷歌服务不可用</string>
    <string name="platform_not_exist">平台信息异常</string>
    <string name="ensure">确定</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="confirm">确认</string>
    <string name="complete">完成</string>
    <string name="error_data">数据异常，请重试</string>
    <string name="double_press_to_exit">再次按返回键退出</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="feature_not_open">功能暂未开放</string>
    <string name="empty_content">空空如也</string>
    <string name="user_id_not_right">用户ID不正确</string>
    <string name="no_network">请确保网络可用</string>
    <string name="timeout">网络超时</string>
    <string name="save">保存</string>
    <string name="view_more">查看更多</string>
    <string name="login_util_input_account">@string/login_input_account</string>
    <string name="feature_jump_over">跳过</string>
    <string name="feature_go_open">去开启</string>
    <string name="tab_main_home">首页</string>
    <string name="tab_main_circle">广场</string>
    <string name="tab_main_chat">聊天</string>
    <string name="tab_main_match">寻缘</string>
    <string name="tab_main_me">我的</string>
    <string name="vip_func_title_sign_label">VIP身份标识</string>
    <string name="vip_func_title_unlimited_like">无限喜欢次数</string>
    <string name="vip_func_title_undo_pass">滑错无限反悔</string>
    <string name="vip_func_title_see_like_me">查看谁喜欢我</string>
    <string name="vip_func_title_private_pic">无限发布私密照片</string>
    <string name="vip_func_title_light_match">每天5次爆灯</string>
    <string name="vip_func_message_sign_label">专属身份标识，让你与众不同</string>
    <string name="vip_func_message_unlimited_like">突破限制，放肆喜欢不再顾虑</string>
    <string name="vip_func_message_undo_pass">缘分稍纵即逝，瞬间找回错过的缘分</string>
    <string name="vip_func_message_see_like_me">查看所有喜欢你的人，点*配对与TA聊天</string>
    <string name="vip_func_message_private_pic">发布私密照片，轻松赚钱</string>
    <string name="vip_func_message_light_match">不想错过，直接配对与TA聊天</string>
    <string name="first_select_next_step">下一步</string>
    <string name="first_select_null_region">请选择地区</string>
    <string name="region_title">国家和地区</string>
    <string name="region_search_hint">选择国家和地区</string>
    <string name="region_code_title">手机区号</string>
    <string name="region_code_search_hint">输入国家和地区</string>
    <string name="region_head_hot">热门</string>
    <string name="language_title">语言</string>
    <string name="language_search_hint">选择语言</string>
    <string name="login_welcome_large">欢迎：</string>
    <string name="login_welcome_small">来到WorldTalk，</string>
    <string name="login_register">立即注册</string>
    <string name="login_input_account">请输入手机号/邮箱</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="login_third_part">or</string>
    <string name="login_im_success">登录成功</string>
    <string name="login_im_force_offline">您的帐号在其他设备登录</string>
    <string name="login_im_sig_expired">已过期，请重新登录</string>
    <string name="login_im_error">初始化IM失败:%1$d msg:%2$s</string>
    <string name="login_util_input_phone">请输入手机号</string>
    <string name="login_util_input_email">请输入邮箱</string>
    <string name="login_util_input_password">请输入密码</string>
    <string name="login_util_phone_invalid">手机号不正确</string>
    <string name="login_util_email_invalid">邮箱不正确</string>
    <string name="login_util_password_rule">密码格式为6–16位数字、字母或符号，不允许有空格</string>
    <string name="login_util_input_old_pwd">请输入旧密码</string>
    <string name="login_util_input_new_pwd">请输入新密码</string>
    <string name="login_util_input_old_new_pwd_not_equals">新密码不能与旧密码相同</string>
    <string name="login_util_input_verify">请输入验证码</string>
    <string name="login_util_verify_invalid">验证码不正确</string>
    <string name="login_enter_verify_code_plz">请输入验证码</string>
    <string name="login_enter_graphic_code_plz">请输入图形验证码</string>
    <string name="login_verity_code_error">验证码错误，请重试</string>
    <string name="register_one_phone">手机号注册</string>
    <string name="register_one_phone_title">手机号注册</string>
    <string name="register_one_email">邮箱注册</string>
    <string name="register_one_email_title">邮箱注册</string>
    <string name="register_one_next_step">下一步</string>
    <string name="register_one_account_exist">已有账号？</string>
    <string name="register_one_login">登录</string>
    <string name="register_two_title">输入验证码</string>
    <string name="register_two_code_send">已发送至%1$s</string>
    <string name="register_two_verify_code_regain">重新获取验证码</string>
    <string name="register_two_verify_code_wait">%1$s秒后重新获取验证码</string>
    <string name="register_title">设置密码</string>
    <string name="register_button_done">完成</string>
    <string name="register_input_password">请输入密码</string>
    <string name="register_contract_input">注册即表示同意 #1 和 #2</string>
    <string name="register_contract_input_one">注册即表示同意 #1</string>
    <string name="register_contract_user">《用户协议》</string>
    <string name="register_contract_user_title">WorldTalk用户协议</string>
    <string name="register_contract_user_url">file:///android_asset/web_page/userProtocol-cn.html</string>
    <string name="register_contract_private">《隐私政策》</string>
    <string name="register_contract_private_title">WorldTalk隐私权政策</string>
    <string name="register_contract_private_url">file:///android_asset/web_page/private-cn.html</string>
    <string name="register_success">注册成功</string>
    <string name="register_password_rule">密码格式为6—16位数字、字母或符号，不允许有空格</string>
    <string name="login_contract_input">#1 和 #2</string>
    <string name="about_us_contract">#1 和 #2</string>
    <string name="privacy_policy_and_user_agreement">隐私政策与用户协议</string>
    <string name="contract_tips">尊敬的用户：在使用软件之前，为了让您更好地了解我们是如何保护用户的个人信息，请您仔细阅读#1和#2。\n
重点内容如下：\n
1.当您使用服务时，我们会根据您的同意，获取您的手机号码、设备信息等\n2.我们会使用 Cookie与同类技术来确保服务正常运转。\n
3.您可以通过本隐私政策所列的途径访问、更正个人信息，也可以进行与我们取得联系进行删除操作等。\n
4.未经您许可，我们不会向任何第三方提供您的信息。\n
5.完整内容点击上方蓝色链接查看。\n
    </string>
    <string name="forget_one_title">忘记密码</string>
    <string name="forget_one_next_step">下一步</string>
    <string name="forget_reset_password">重置密码</string>
    <string name="forget_reset_pwd_succeed">密码已重置</string>
    <string name="bind_title">绑定联系方式</string>
    <string name="bind_gain_diamond">您已获得了100颗粉钻</string>
    <string name="change_phone_title">更换手机号</string>
    <string name="bind_input_info_to_get_diamond">请输入手机号/邮箱领取</string>
    <string name="bind_diamond_value">=1$（可提现）</string>
    <string name="bind_tab_phone">手机</string>
    <string name="bind_tab_email">邮箱</string>
    <string name="bind_input_code">请输入验证码</string>
    <string name="bind_gain_code">获取验证码</string>
    <string name="bind_button_text">绑定</string>
    <string name="bind_please_select_nation_code">请选择区号</string>
    <string name="complete_user_info">信息完善</string>
    <string name="complete_update_head">上传头像</string>
    <string name="complete_update_head_hint">请上传真实头像，您会获得更多关注</string>
    <string name="complete_country">国籍/地区</string>
    <string name="complete_country_input">国籍/地区 :</string>
    <string name="complete_nicky">昵称</string>
    <string name="complete_nicky_input">请填写昵称</string>
    <string name="complete_birthday">出生日期</string>
    <string name="complete_sex">性别</string>
    <string name="complete_sex_hint">提交后不可改</string>
    <string name="complete_inviter_id">邀请人ID</string>
    <string name="complete_inviter_id_hint">输入邀请码获得100*=1$</string>
    <string name="complete_button_text">提交</string>
    <string name="complete_sheet_sex_title">选择性别</string>
    <string name="complete_please_upload_head">请上传头像</string>
    <string name="complete_please_select_country">请选择国家/地区</string>
    <string name="complete_please_select_sex">请选择性别</string>
    <string name="complete_please_select_birthday">请选择出生日期</string>
    <string name="complete_upload_head_error">头像上传失败</string>
    <string name="complete_upload_info_error">用户信息修改失败</string>
    <string name="complete_invite_tip">此手机已使用过邀请码</string>
    <string name="complete_option">选填</string>
    <string name="complete_invite_code_error_retype">重输</string>
    <string name="complete_invite_code_error_skip">跳过</string>
    <string name="match_title">寻缘</string>
    <string name="match_succeed_slogan">&#160;&#160;&#160;&#160;人的一生会遇到约2920万人，两人相互喜欢的概率是0.000049，这就叫缘分。</string>
    <string name="match_succeed_start_chat">开始聊天</string>
    <string name="match_succeed_return">继续寻缘</string>
    <string name="match_super_exposure">超级曝光</string>
    <string name="match_super_exposure_find">查看</string>
    <string name="match_super_exposure_info">30分钟内卡片加倍曝光，配对猛涨！</string>
    <string name="match_super_exposure_end">您的加倍曝光已结束</string>
    <string name="match_super_exposure_count_input">%1$d次</string>
    <string name="match_super_buy_now">立即购买</string>
    <string name="match_super_go_recharge">去充值</string>
    <string name="match_super_exposure_price_count_input">$%1$s/次</string>
    <string name="match_like_count_not_enough">今日爆灯次数已用完</string>
    <string name="like_list_like">喜欢</string>
    <string name="like_list_be_liked">喜欢我</string>
    <string name="like_list_vip_num_start">共有</string>
    <string name="like_list_vip_num_end">人喜欢过你</string>
    <string name="like_list_vip_hint">获取VIP可以查看所有喜欢过你的人</string>
    <string name="like_list_vip_button_text">获取VIP</string>
    <string name="like_list_vip_func_title">VIP享有6项特权</string>
    <string name="like_empty_msg_be_liked">完善个人信息，让更多的人喜欢你！</string>
    <string name="like_empty_btn_be_liked">个人信息</string>
    <string name="like_empty_msg_i_like">与其未知的等待，不如主动去寻缘！</string>
    <string name="like_empty_btn_i_like">寻缘</string>
    <string name="dialog_vip_month_one">1个月</string>
    <string name="dialog_vip_month_three">3个月</string>
    <string name="dialog_vip_month_twelve">12个月</string>
    <string name="dialog_vip_hot_price">热门推荐</string>
    <string name="dialog_vip_off_sale">%1$s折</string>
    <string name="dialog_vip_buy_now">立即购买</string>
    <string name="dialog_vip_or">或</string>
    <string name="dialog_vip_get_one_month_vip_free">免费获得1个月VIP</string>
    <string name="dialog_vip_invite_five_friends">邀请5个好友注册app</string>
    <string name="dialog_vip_title">会员充值</string>
    <string name="dialog_vip_invite_last_friends_input">邀请%1$d个好友注册app</string>
    <string name="dialog_vip_input_month">%1$d个月</string>
    <string name="dialog_vip_input_month_vip">%1$d个月的vip</string>
    <string name="dialog_vip_unit_month">%1$s¥/月</string>
    <string name="home_match">寻缘</string>
    <string name="home_like_me">喜欢我的</string>
    <string name="home_popup_sex_all">不限</string>
    <string name="home_tab_all">全部</string>
    <string name="home_tab_ua_ru">乌克兰俄罗斯</string>
    <string name="home_tab_eu">欧美</string>
    <string name="home_tab_kkc">日韩</string>
    <string name="home_tab_sa">东南亚</string>
    <string name="home_tab_cls">中港台</string>
    <string name="home_tab_rests">其他</string>
    <string name="circle_tab_friend">关注</string>
    <string name="circle_tab_world">社区</string>
    <string name="circle_item_see_translation">查看翻译</string>
    <string name="publish_pick_from_camera">拍摄</string>
    <string name="publish_pick_photos_or_videos">照片或视频</string>
    <string name="publish_pick_from_album">从手机相册选择</string>
    <string name="publish_pick_cancel">取消</string>
    <string name="video_call_trans_dialog_title">视频翻译</string>
    <string name="video_call_trans_dialog_charge">充值</string>
    <string name="common_dialog_phone_registered_negative">知道了</string>
</resources>