<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/option_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_dialog_publish_camera"
        android:orientation="vertical"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/publish_pick_from_camera"
            android:textSize="@dimen/text_15sp"
            android:textColor="@color/gray_70747C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_dialog_publish_media_type"
            android:text="@string/publish_pick_photos_or_videos"
            android:layout_marginTop="11dp"
            android:textSize="12sp"
            android:textColor="#A8ABB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line_short_divder_line"
        android:layout_marginStart="@dimen/width_14dp"
        android:layout_marginEnd="@dimen/width_14dp"
        android:layout_width="wrap_content"
        android:layout_height="1px"/>

    <TextView
        android:id="@+id/tv_dialog_publish_album"
        android:text="@string/publish_pick_from_album"
        android:textSize="@dimen/text_15sp"
        android:textColor="@color/gray_70747C"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/publish_dialog_selection_height" />

    <View
        android:background="@color/line_short_divder_line"
        android:layout_marginStart="@dimen/width_14dp"
        android:layout_marginEnd="@dimen/width_14dp"
        android:layout_width="wrap_content"
        android:layout_height="1px"/>

    <TextView
        android:id="@+id/tv_dialog_publish_cancel"
        android:text="@string/publish_pick_cancel"
        android:textSize="@dimen/text_15sp"
        android:textColor="@color/gray_70747C"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/publish_dialog_selection_height" />

</LinearLayout>