<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_dialog_video_trans"
        android:text="@string/video_call_trans_dialog_title"
        android:textSize="@dimen/text_large_s"
        android:textColor="@color/text_dark"
        android:layout_marginTop="@dimen/margin_default"
        android:padding="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_dialog_video_trans_content"
        android:textSize="@dimen/text_default_l"
        android:textColor="@color/text_dark"
        android:padding="@dimen/margin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/bg_common_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_line_width"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_dialog_video_trans_cancel"
            android:text="@string/cancel"
            android:textSize="@dimen/text_large_s"
            android:textColor="@color/text_dark"
            android:gravity="center"
            android:paddingTop="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/bg_common_grey"
            android:layout_width="@dimen/bottom_line_width"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_dialog_video_trans_charge"
            android:text="@string/video_call_trans_dialog_charge"
            android:textSize="@dimen/text_large_s"
            android:textColor="@color/blue_nomal"
            android:gravity="center"
            android:paddingTop="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>