<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lyt_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/common_dialog_bg"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fyt_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="@dimen/margin_default"
                android:paddingTop="40dp"
                android:paddingEnd="@dimen/margin_default"
                android:paddingBottom="30dp"
                android:textColor="@color/text_dark"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="这是标题" />

        </FrameLayout>


        <TextView
            android:id="@+id/txt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingStart="@dimen/margin_default"
            android:paddingEnd="@dimen/margin_default"
            android:paddingBottom="44dp"
            android:textColor="@color/text_a8aba2"
            android:textSize="@dimen/text_15sp"
            android:textStyle="normal"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="这是标题" />


        <View
            android:id="@+id/btn_top_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_short_divder_line" />


        <TextView
            android:id="@+id/tv_i_know"
            android:background="@drawable/wanring_i_konw_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15sp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="34dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="23dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/common_dialog_phone_registered_negative"
            />



        <LinearLayout
            android:id="@+id/lyt_button_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/gray_70747C"
                android:textSize="@dimen/text_15sp" />

            <View
                android:id="@+id/line_divider"
                android:layout_width="1px"
                android:layout_height="42dp"
                android:background="@color/line_short_divder_line" />

            <TextView
                android:id="@+id/txt_confirm"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/blue_nomal"
                android:textSize="@dimen/text_15sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
